[tool.poetry]
name = "htping"
version = "0.2.3"
description = "A simple CLI tool to ping HTTP servers"
authors = ["Lukas Holzner <git@lukas.lhal.de>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-mock = "^3.6"

[tool.poetry.scripts]
htping = "htping.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
