[tool.poetry]
name = "htping"
version = "0.5.0"
description = "A simple CLI tool to ping HTTP servers"
authors = ["Lukas Holzner <git@lukas.lhal.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2"
pytest-mock = "^3.14"
black = "^23.12"
flake8 = "^7.0"
mypy = "^1.8"
isort = "^5.13"
pre-commit = "^3.6"

[tool.poetry.scripts]
htping = "htping.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["htping"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
